[gd_scene load_steps=32 format=2]

[ext_resource path="res://assets/seed icon.png" type="Texture2D" id=2]
[ext_resource path="res://assets/trees/cherry_icon.png" type="Texture2D" id=4]
[ext_resource path="res://assets/trees/cherry_icon_hover.png" type="Texture2D" id=5]
[ext_resource path="res://assets/trees/cherry_icon_pressed.png" type="Texture2D" id=6]
[ext_resource path="res://src/Objects/UI.gd" type="Script" id=7]
[ext_resource path="res://assets/OpenSans-Regular.ttf" type="FontFile" id=8]
[ext_resource path="res://assets/OpenSans-Bold.ttf" type="FontFile" id=9]
[ext_resource path="res://assets/trees/ice_icon_pressed.png" type="Texture2D" id=10]
[ext_resource path="res://assets/trees/ice_icon_hover.png" type="Texture2D" id=11]
[ext_resource path="res://assets/trees/ice_icon.png" type="Texture2D" id=12]
[ext_resource path="res://assets/trees/big_icon_hover.png" type="Texture2D" id=13]
[ext_resource path="res://assets/trees/big_icon_pressed.png" type="Texture2D" id=14]
[ext_resource path="res://assets/trees/big_icon.png" type="Texture2D" id=15]

[sub_resource type="FontFile" id=6]
size = 32
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.2, 0.52549, 0, 1 )

[sub_resource type="FontFile" id=7]
size = 30
font_data = ExtResource( 9 )

[sub_resource type="FontFile" id=8]
size = 32
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0, 0, 0.196078 )

[sub_resource type="FontFile" id=9]
size = 14
font_data = ExtResource( 8 )

[sub_resource type="FontFile" id=10]
size = 20
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0, 0, 0, 0.196078 )

[sub_resource type="FontFile" id=14]
size = 14
font_data = ExtResource( 8 )

[sub_resource type="FontFile" id=11]
size = 20
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0, 0, 0, 0.196078 )

[sub_resource type="FontFile" id=15]
size = 14
font_data = ExtResource( 8 )

[sub_resource type="FontFile" id=12]
size = 20
font_data = ExtResource( 8 )

[sub_resource type="FontFile" id=2]
size = 120
font_data = ExtResource( 9 )

[sub_resource type="FontFile" id=3]
size = 70
font_data = ExtResource( 8 )

[sub_resource type="FontFile" id=4]
size = 27
font_data = ExtResource( 8 )

[sub_resource type="FontFile" id=13]
size = 20
font_data = ExtResource( 8 )

[sub_resource type="FontFile" id=5]
size = 50
font_data = ExtResource( 9 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="Life" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -140.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="Life"]
offset_right = 120.0
offset_bottom = 91.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeLabel" type="Label" parent="Life/Container"]
offset_right = 120.0
offset_bottom = 45.0
theme_override_fonts/font = SubResource( 6 )
text = "Life"
align = 1

[node name="LifeProgress" type="ProgressBar" parent="Life/Container"]
offset_top = 49.0
offset_right = 120.0
offset_bottom = 91.0
custom_minimum_size = Vector2( 100, 0 )
theme_override_styles/fg = SubResource( 1 )
theme_override_fonts/font = SubResource( 7 )
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Seeds" type="MarginContainer" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 81.0
offset_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="HBoxContainer" parent="Seeds"]
offset_right = 90.0
offset_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SeedsIcon" type="TextureRect" parent="Seeds/Container"]
offset_right = 68.0
offset_bottom = 68.0
texture = ExtResource( 2 )

[node name="SeedsLabel" type="Label" parent="Seeds/Container"]
offset_left = 72.0
offset_top = 11.0
offset_right = 90.0
offset_bottom = 56.0
theme_override_fonts/font = SubResource( 8 )
text = "0"

[node name="Shop" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -340.0
offset_bottom = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trees" type="HBoxContainer" parent="Shop"]
offset_right = 1870.0
offset_bottom = 318.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CherryContainer" type="VBoxContainer" parent="Shop/Trees"]
offset_right = 111.0
offset_bottom = 318.0

[node name="DescriptionContainer" type="Control" parent="Shop/Trees/CherryContainer"]
offset_right = 111.0
offset_bottom = 150.0
custom_minimum_size = Vector2( 0, 150 )

[node name="Description" type="Label" parent="Shop/Trees/CherryContainer/DescriptionContainer"]
visible = false
offset_right = 92.0
offset_bottom = 150.0
custom_minimum_size = Vector2( 0, 150 )
theme_override_styles/normal = SubResource( 16 )
theme_override_fonts/font = SubResource( 9 )
text = "The allrounder. Medium shooting frequency and damage."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost" type="Label" parent="Shop/Trees/CherryContainer"]
offset_top = 154.0
offset_right = 111.0
offset_bottom = 182.0
theme_override_fonts/font = SubResource( 10 )
text = "Cherry - 500"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="Shop/Trees/CherryContainer"]
offset_top = 186.0
offset_right = 111.0
offset_bottom = 314.0

[node name="Cherry" type="TextureButton" parent="Shop/Trees/CherryContainer/CenterContainer"]
offset_left = 9.0
offset_right = 101.0
offset_bottom = 128.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )

[node name="IceContainer" type="VBoxContainer" parent="Shop/Trees"]
offset_left = 115.0
offset_right = 229.0
offset_bottom = 318.0

[node name="DescriptionContainer" type="Control" parent="Shop/Trees/IceContainer"]
offset_right = 114.0
offset_bottom = 150.0
custom_minimum_size = Vector2( 0, 150 )

[node name="Description" type="Label" parent="Shop/Trees/IceContainer/DescriptionContainer"]
visible = false
offset_top = 3.0
offset_right = 114.0
offset_bottom = 103.0
custom_minimum_size = Vector2( 0, 150 )
theme_override_styles/normal = SubResource( 17 )
theme_override_fonts/font = SubResource( 14 )
text = "Make it snow. Low damage, but slows down the enemy."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost" type="Label" parent="Shop/Trees/IceContainer"]
offset_top = 154.0
offset_right = 114.0
offset_bottom = 182.0
theme_override_fonts/font = SubResource( 11 )
text = "Ice - 800"
align = 1

[node name="Ice" type="TextureButton" parent="Shop/Trees/IceContainer"]
offset_top = 186.0
offset_right = 114.0
offset_bottom = 314.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )

[node name="BigContainer" type="VBoxContainer" parent="Shop/Trees"]
offset_left = 233.0
offset_right = 347.0
offset_bottom = 318.0

[node name="DescriptionContainer" type="Control" parent="Shop/Trees/BigContainer"]
offset_right = 114.0
offset_bottom = 150.0
custom_minimum_size = Vector2( 0, 150 )

[node name="Description" type="Label" parent="Shop/Trees/BigContainer/DescriptionContainer"]
visible = false
offset_top = 3.0
offset_right = 114.0
offset_bottom = 103.0
custom_minimum_size = Vector2( 0, 150 )
theme_override_styles/normal = SubResource( 18 )
theme_override_fonts/font = SubResource( 15 )
text = "BOOM! It might be slow, but the area damage more than makes up for it."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost" type="Label" parent="Shop/Trees/BigContainer"]
offset_top = 154.0
offset_right = 114.0
offset_bottom = 182.0
theme_override_fonts/font = SubResource( 12 )
text = "Biggy - 1100"
align = 1

[node name="Big" type="TextureButton" parent="Shop/Trees/BigContainer"]
offset_top = 186.0
offset_right = 114.0
offset_bottom = 315.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 13 )

[node name="Wave" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.5
offset_top = -132.5
offset_right = 163.5
offset_bottom = 132.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaveHeadline" type="Label" parent="Wave"]
visible = false
offset_right = 327.0
offset_bottom = 165.0
theme_override_fonts/font = SubResource( 2 )
text = "Wave"
align = 1

[node name="WaveText" type="Label" parent="Wave"]
visible = false
offset_right = 327.0
offset_bottom = 96.0
theme_override_fonts/font = SubResource( 3 )
text = "0"
align = 1

[node name="WaveInfo" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.5
offset_top = 20.0
offset_right = 80.5
offset_bottom = 23.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="WaveInfo"]
offset_right = 201.0
offset_bottom = 69.0

[node name="WaveLabel" type="Label" parent="WaveInfo/Container"]
offset_right = 201.0
offset_bottom = 37.0
theme_override_fonts/font = SubResource( 4 )
text = "Level 1 - Wave 1"
align = 1

[node name="TimerLabel" type="Label" parent="WaveInfo/Container"]
offset_top = 41.0
offset_right = 201.0
offset_bottom = 69.0
theme_override_fonts/font = SubResource( 13 )
text = "Time to next wave: 0s"
align = 1

[node name="GameOver" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -34.5
offset_right = 500.0
offset_bottom = 34.5
custom_minimum_size = Vector2( 1000, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GameOver"]
visible = false
offset_right = 1000.0
offset_bottom = 69.0
custom_minimum_size = Vector2( 1000, 0 )
theme_override_fonts/font = SubResource( 5 )
text = "You won!"
align = 1
[connection signal="mouse_entered" from="Shop/Trees/CherryContainer/CenterContainer/Cherry" to="." method="_on_Cherry_mouse_entered"]
[connection signal="mouse_exited" from="Shop/Trees/CherryContainer/CenterContainer/Cherry" to="." method="_on_Cherry_mouse_exited"]
[connection signal="pressed" from="Shop/Trees/CherryContainer/CenterContainer/Cherry" to="." method="_on_Cherry_pressed"]
[connection signal="mouse_entered" from="Shop/Trees/IceContainer/Ice" to="." method="_on_Ice_mouse_entered"]
[connection signal="mouse_exited" from="Shop/Trees/IceContainer/Ice" to="." method="_on_Ice_mouse_exited"]
[connection signal="pressed" from="Shop/Trees/IceContainer/Ice" to="." method="_on_Ice_pressed"]
[connection signal="mouse_entered" from="Shop/Trees/BigContainer/Big" to="." method="_on_Big_mouse_entered"]
[connection signal="mouse_exited" from="Shop/Trees/BigContainer/Big" to="." method="_on_Big_mouse_exited"]
[connection signal="pressed" from="Shop/Trees/BigContainer/Big" to="." method="_on_Big_pressed"]
